--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,16 @@
 		"issues": "http://github.com/silverstripe-labs/silverstripe-tagfield/issues"
 	},
 	"require": {
-		"silverstripe/framework": "~3.1"
+		"silverstripe/framework": "~4.0.0-alpha3"
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-master": "1.3.x-dev"
+			"dev-master": "4.0.x-dev"
 		}
-	}
+	},
+	"autoload": {
+		"psr-4": {"SilverStripe\\Forms\\": "code/"}
+	},
+	"prefer-stable": true,
+	"minimum-stability": "dev"
 }
